# arxiv-agent

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_tests.py
.github/workflows/: check_papers.yml  test.yml
api/: routes.py  server.py
arxiv_diff/: config.py  main.py
arxiv_diff/agent/: orchestrator.py  prompts.py  schemas.py
arxiv_diff/tools/: arxiv_api.py  figure_detector.py  metadata_compare.py  pdf_extractor.py  section_parser.py  text_differ.py
db/: models.py  store.py
scripts/: test_agent.py  test_pipeline.py
tests/: conftest.py  test_tools.py
watcher/: monitor.py
